--- a/documentation/DESCRIPTION.en_us.html
+++ b/documentation/DESCRIPTION.en_us.html
@@ -1,13 +1,9 @@
 <p>
-Eczar is an open-source type family published by Rosetta with generous financial support from Google. 
-The family currently has 5 weights.
+Eczar is designed by Vaibhav Singh, produced by David Březina, and published by Rosetta Type Foundry.
+It began as a student project in 2010 during Vaibhav’s MA Typeface Design studies at the University of Reading (UK).
+Eczar was designed to bring liveliness and vigor to multi-script typesetting in Latin and Devanagari, and providing an alternative to existing designs by imparting a strong mix of personality and performance at both text and display sizes.
+The display qualities of the design intensify in the heavier weights, and the heaviest is best suited for headline and display purposes.
 </p>
 <p>
-Eczar supports over 45 languages in Latin and 3 in Devanagari script (Hindi, Marathi, and Nepali).
-</p>
-The project design and production was done in-house. Design by Vaibhav Singh, code and production by David Březina. Eczar was designed to bring liveliness and vigor to multi-script typesetting in Latin and Devanagari – with the intention of providing an alternative to existing designs by imparting a strong mix of personality and performance, both at text sizes and in display settings.
-</p>
-<p>
-The Eczar project is led by Rosetta, world-typography specialist and font publisher based in Europe. 
-To contribute, see <a href="https://github.com/rosettatype/eczar">github.com/rosettatype/eczar</a>
+To contribute to this project, see <a href="https://github.com/rosettatype/Eczar">github.com/rosettatype/Eczar</a>
 </p>
